// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render properly with read messages 1`] = `
.c0 {
  border: 2px dashed #DDD;
  box-sizing: border-box;
  border-radius: 50%;
  position: relative;
  width: 48px;
  height: 48px;
}

.c0.kirk-avatar--small {
  height: 40px;
  width: 40px;
}

.c0.kirk-avatar--medium {
  height: 96px;
  width: 96px;
}

.c0.kirk-avatar--large {
  height: 156px;
  width: 156px;
}

.c0.kirk-avatar--image {
  border: none;
}

.c0.kirk-avatar--image img {
  border-radius: 50%;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.c0 .kirk-badge.kirk-avatar-badge--unreadNotifications,
.c0 .kirk-badge.kirk-avatar-badge--idCheck {
  z-index: 2;
  position: absolute;
}

.c0 .kirk-badge.kirk-avatar-badge--unreadNotifications {
  top: -6px;
  right: -6px;
}

.c0 .kirk-badge.kirk-avatar-badge--idCheck {
  bottom: -3px;
  right: -3px;
  width: 18px;
  height: 18px;
  padding: 0;
  border-radius: 50%;
  background-color: #5DD167;
}

.c0.kirk-avatar--medium .kirk-badge.kirk-avatar-badge--idCheck,
.c0.kirk-avatar--large .kirk-badge.kirk-avatar-badge--idCheck {
  bottom: 0;
  right: 0;
}

.c0 .kirk-avatar--medium .kirk-badge.kirk-avatar-badge--idCheck {
  width: 24px;
  height: 24px;
}

.c0 .kirk-avatar--large .kirk-badge.kirk-avatar-badge--idCheck {
  width: 36px;
  height: 36px;
}

.c0 .kirk-avatar--medium .kirk-badge.kirk-avatar-badge--unreadNotifications {
  height: 24px;
  line-height: 23px;
  font-size: 14px;
  padding: 0 6px;
}

.c0 .kirk-avatar--large .kirk-badge.kirk-avatar-badge--unreadNotifications {
  height: 36px;
  line-height: 34px;
  font-size: 18px;
  padding: 0 8px;
}

<a
  className="jsx-1542968643 kirk-item kirk-item--clickable kirk-messaging-summary-item"
  href="http_test.url"
>
  <div
    className="jsx-1542968643 kirk-item-leftText"
  >
    <div
      className="kirk-text kirk-text-titleStrong kirk-item-title"
      style={
        Object {
          "color": "#708C91",
        }
      }
    >
      A label
    </div>
    <div
      className="kirk-text kirk-text-title kirk-item-body"
      style={
        Object {
          "color": "#708C91",
        }
      }
    >
      <span
        className="kirk-messaging-summary-item-sub-label"
      >
        A sub label
      </span>
    </div>
    <div
      className="kirk-text kirk-text-caption kirk-item-body-annotation"
    >
      3 days ago
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightAddon"
  >
    <div
      className="kirk-avatar--image c0 kirk-avatar"
    >
      <img
        alt=""
        src="http_test.picture.url"
      />
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightAddon"
  >
    <svg
      aria-hidden={true}
      className="kirk-icon"
      fill="#708C91"
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <polyline
        fill="none"
        points="9 18 15 12 9 6"
        stroke="#708C91"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeMiterlimit="10"
        strokeWidth="2"
      />
    </svg>
  </div>
</a>
`;

exports[`Should render properly with unread messages 1`] = `
.c0 {
  border: 2px dashed #DDD;
  box-sizing: border-box;
  border-radius: 50%;
  position: relative;
  width: 48px;
  height: 48px;
}

.c0.kirk-avatar--small {
  height: 40px;
  width: 40px;
}

.c0.kirk-avatar--medium {
  height: 96px;
  width: 96px;
}

.c0.kirk-avatar--large {
  height: 156px;
  width: 156px;
}

.c0.kirk-avatar--image {
  border: none;
}

.c0.kirk-avatar--image img {
  border-radius: 50%;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.c0 .kirk-badge.kirk-avatar-badge--unreadNotifications,
.c0 .kirk-badge.kirk-avatar-badge--idCheck {
  z-index: 2;
  position: absolute;
}

.c0 .kirk-badge.kirk-avatar-badge--unreadNotifications {
  top: -6px;
  right: -6px;
}

.c0 .kirk-badge.kirk-avatar-badge--idCheck {
  bottom: -3px;
  right: -3px;
  width: 18px;
  height: 18px;
  padding: 0;
  border-radius: 50%;
  background-color: #5DD167;
}

.c0.kirk-avatar--medium .kirk-badge.kirk-avatar-badge--idCheck,
.c0.kirk-avatar--large .kirk-badge.kirk-avatar-badge--idCheck {
  bottom: 0;
  right: 0;
}

.c0 .kirk-avatar--medium .kirk-badge.kirk-avatar-badge--idCheck {
  width: 24px;
  height: 24px;
}

.c0 .kirk-avatar--large .kirk-badge.kirk-avatar-badge--idCheck {
  width: 36px;
  height: 36px;
}

.c0 .kirk-avatar--medium .kirk-badge.kirk-avatar-badge--unreadNotifications {
  height: 24px;
  line-height: 23px;
  font-size: 14px;
  padding: 0 6px;
}

.c0 .kirk-avatar--large .kirk-badge.kirk-avatar-badge--unreadNotifications {
  height: 36px;
  line-height: 34px;
  font-size: 18px;
  padding: 0 8px;
}

<a
  className="jsx-1542968643 kirk-item kirk-item--clickable kirk-messaging-summary-item"
  href="http_test.url"
>
  <div
    className="jsx-1542968643 kirk-item-leftText"
  >
    <div
      className="kirk-text kirk-text-titleStrong kirk-item-title"
      style={
        Object {
          "color": "#054752",
        }
      }
    >
      A label
    </div>
    <div
      className="kirk-text kirk-text-title kirk-item-body"
      style={
        Object {
          "color": "#054752",
        }
      }
    >
      <span
        className="kirk-messaging-summary-item-sub-label"
      >
        A sub label
      </span>
    </div>
    <div
      className="kirk-text kirk-text-caption kirk-item-body-annotation"
    >
      3 days ago
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightAddon"
  >
    <div
      className="kirk-avatar--image c0 kirk-avatar"
    >
      <img
        alt=""
        src="http_test.picture.url"
      />
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightAddon"
  >
    <svg
      aria-hidden={true}
      className="kirk-icon"
      fill="#708C91"
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <polyline
        fill="none"
        points="9 18 15 12 9 6"
        stroke="#708C91"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeMiterlimit="10"
        strokeWidth="2"
      />
    </svg>
  </div>
</a>
`;
